--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,10 +34,10 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.squareup.okhttp3:okhttp:4.2.2'
+    implementation 'com.blankj:utilcode:1.10.0'
     implementation 'com.android.support:recyclerview-v7:29.0.0'
     implementation 'org.litepal.android:kotlin:3.0.0'
     implementation 'com.gyf.immersionbar:immersionbar:3.0.0'
+    implementation 'org.litepal.android:kotlin:3.0.0'
 }
