--- a/app/src/main/assets/config
+++ b/app/src/main/assets/config
@@ -1,5 +1,5 @@
 [
-{"projectName":"淘金岛","signKey":"U2FsdGVkX19X5NAwZN8I2oWsRPaYGJPy","urls":"https://yulunxun.oss-cn-zhangjiakou.aliyuncs.com","appId":"","privateKey":""},
-{"projectName":"钱多多","signKey":"U2FsdGVkX19X5NAwZN8I2oWsRPaYGJPy","urls":"https://qianddd.oss-accelerate.aliyuncs.com","appId":"","privateKey":""},
-{"projectName":"人人赚","signKey":"nrVvOYKC3yYiZRd13QjSQbTKGlXzLGaA","urls":"https://andrenlun.oss-cn-shanghai.aliyuncs.com","appId":"","privateKey":""}
+{"projectName":"宜人赚","signKey":"U2FsdGVkX19X5NAwZN8I2oWsRPaYGJPy","urls":"https://taojindao.github.io/pay/tpay","appId":"2019111769218219"},
+{"projectName":"钱多多","signKey":"U2FsdGVkX19X5NAwZN8I2oWsRPaYGJPy","urls":"https://qianddd.oss-accelerate.aliyuncs.com","appId":"2021001106683838"},
+{"projectName":"钱宝","signKey":"nrVvOYKC3yYiZRd13QjSQbTKGlXzLGaA","urls":"https://qianyulun.oss-cn-shenzhen.aliyuncs.com","appId":"2021001126601678"}
 ]
