--- a/app/src/main/assets/config
+++ b/app/src/main/assets/config
@@ -1,5 +1,3 @@
 [
-{"projectName":"宜人赚","signKey":"U2FsdGVkX19X5NAwZN8I2oWsRPaYGJPy","urls":"https://taojindao.github.io/pay/tpay","appId":"2019111769218219"},
-{"projectName":"钱多多","signKey":"U2FsdGVkX19X5NAwZN8I2oWsRPaYGJPy","urls":"https://qianddd.oss-accelerate.aliyuncs.com","appId":"2021001106683838"},
-{"projectName":"钱宝","signKey":"nrVvOYKC3yYiZRd13QjSQbTKGlXzLGaA","urls":"https://qianyulun.oss-cn-shenzhen.aliyuncs.com","appId":"2021001126601678"}
+{"projectName":"tPay","signKey":"U2FsdGVkX19X5NAwZN8I2oWsRPaYGJPy","urls":"https://luckymoney01.github.io/pay/tpay","appId":"2019111769218219"}
 ]
