--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+    buildToolsVersion '29.0.0'
     defaultConfig {
         applicationId "com.dejin.urltest"
         minSdkVersion 24
@@ -14,6 +14,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
     }
     buildTypes {
         release {
@@ -30,14 +31,14 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    implementation 'com.squareup.okhttp3:okhttp:4.2.2'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha06'
+    testImplementation 'junit:junit:4.13'
+    implementation 'com.squareup.okhttp3:okhttp:4.3.1'
     implementation 'com.blankj:utilcode:1.10.0'
-    implementation 'com.android.support:recyclerview-v7:29.0.0'
     implementation 'org.litepal.android:kotlin:3.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.gyf.immersionbar:immersionbar:3.0.0'
-    implementation 'org.litepal.android:kotlin:3.0.0'
 }
